--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   image_picker: ^0.8.7+4
   firebase_storage: ^12.4.10
   file_picker: ^6.0.0
+  razorpay_flutter: ^1.3.7                               # Payments (Razorpay)
+  http: ^1.2.2                               # HTTP requests (for Dunzo or external APIs)
+
+
 
 
 dev_dependencies:
@@ -31,3 +35,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logo.png
+
