--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   firebase_storage: ^12.4.10
   file_picker: ^6.0.0
   razorpay_flutter: ^1.3.7                               # Payments (Razorpay)
-  http: ^1.2.2                               # HTTP requests (for Dunzo or external APIs)
+  http: ^1.2.2          
+  supabase_flutter: ^2.3.0                     # HTTP requests (for Dunzo or external APIs)
 
 
 
