--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   file_picker: ^6.0.0
   razorpay_flutter: ^1.3.7                               # Payments (Razorpay)
   http: ^1.2.2          
-  supabase_flutter: ^2.3.0                     # HTTP requests (for Dunzo or external APIs)
+  supabase_flutter: ^2.3.0
+  razorpay_web: 3.0.0
 
 
 
