--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,19 +17,16 @@ dependencies:
   provider: ^6.1.1
   google_fonts: ^6.1.0
   intl: ^0.19.0
-  geolocator: ^13.0.1      # For location
-  geocoding: ^3.0.0        # For address from coordinates
+  geolocator: ^13.0.1          # For GPS location
+  geocoding: ^3.0.0            # For address conversion
   image_picker: ^0.8.7+4
   firebase_storage: ^12.4.10
   file_picker: ^6.0.0
-  razorpay_flutter: ^1.3.7                               # Payments (Razorpay)
-  http: ^1.2.2          
+  razorpay_flutter: ^1.3.7     # Razorpay payments (mobile)
+  razorpay_web: ^3.0.0         # Razorpay for web
+  http: ^1.2.2
   supabase_flutter: ^2.3.0
-  razorpay_web: 3.0.0
   cached_network_image: ^3.4.1
-
-
-
 
 dev_dependencies:
   flutter_test:
@@ -40,4 +37,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
-
